Fix issues
- Add `with_dismissed` param to announcements API
- Fix end date not being formatted when time range is given
- Fix announcement delete causing reactions to send streaming updates
- Fix announcements container growing too wide and mascot too small
- Fix `all_day` being settable when no time range is given
- Change text "Update" to "Announcement"

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -6629,6 +6629,7 @@ noscript {
 
   &__mastodon {
     width: 124px;
+    flex: 0 0 auto;
 
     @media screen and (max-width: 124px + 300px) {
       display: none;
@@ -6636,8 +6637,13 @@ noscript {
   }
 
   &__container {
-    flex: 1 1 0%;
+    width: calc(100% - 124px);
+    flex: 0 0 auto;
     position: relative;
+
+    @media screen and (max-width: 124px + 300px) {
+      width: 100%;
+    }
   }
 
   &__item {
@@ -6671,6 +6677,10 @@ noscript {
 
 .layout-multiple-columns .announcements__mastodon {
   display: none;
+}
+
+.layout-multiple-columns .announcements__container {
+  width: 100%;
 }
 
 .reactions-bar {
